fix: stream SBS segments while keeping 3.3 seamless refresh